tests/ui/internal/unstable-impl-cannot-use-feature.fail.stderr
error[E0284]: type annotations needed: cannot satisfy `unstable feature: `feat_foo``
  --> $DIR/unstable-impl-cannot-use-feature.rs:27:5
   |
LL |     Bar::foo();
   |     ^^^ cannot satisfy `unstable feature: `feat_foo``
   |
note: required for `Bar` to implement `Foo`
  --> $DIR/unstable-impl-cannot-use-feature.rs:21:6
   |
LL | #[unstable_feature_bound(feat_foo)]
   | ----------------------------------- unsatisfied trait bound introduced here
LL | impl Foo for Bar {
   |      ^^^     ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
